# ZStruct

./: CMakeLists.txt  Makefile  icoord.cpp  nbo.cpp  utils.cpp  write.cpp
include/: zstruct.h
src/: CMakeLists.txt  align.cpp  atom.cpp  dft.cpp  iccomp.cpp  icoord.cpp  knnr.cpp  lsq.cpp  main.cpp  mem.cpp  mm_grad.cpp  mopac.cpp  nbo.cpp  opt.cpp  pTable.cpp  print.cpp  rtype.cpp  rxndb.cpp  rxnftr.cpp  stringtools.cpp  tm.cpp  utils.cpp  write.cpp  zstruct.cpp
